Another small text alignment bug

--- a/src/components/Content/Recognition/Recognition.scss
+++ b/src/components/Content/Recognition/Recognition.scss
@@ -2,6 +2,7 @@
 
 .Recognition {
   @include PageRoot;
+  text-align: center;
 
   .Source {
     display: flex;
